--- a/week-2/composer-app/package.json
+++ b/week-2/composer-app/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.2.4",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "jquery": "^3.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
