--- a/week-4/di-composer-app/angular.json
+++ b/week-4/di-composer-app/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "enhanced-composer-app": {
+    "di-composer-app": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/enhanced-composer-app",
+            "outputPath": "dist/di-composer-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "enhanced-composer-app:build"
+            "browserTarget": "di-composer-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "enhanced-composer-app:build:production"
+              "browserTarget": "di-composer-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "enhanced-composer-app:build"
+            "browserTarget": "di-composer-app:build"
           }
         },
         "test": {
@@ -114,15 +114,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "enhanced-composer-app:serve"
+            "devServerTarget": "di-composer-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "enhanced-composer-app:serve:production"
+              "devServerTarget": "di-composer-app:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "enhanced-composer-app"
+  "defaultProject": "di-composer-app"
 }
