--- a/week-5/in-n-out-booksp1/angular.json
+++ b/week-5/in-n-out-booksp1/angular.json
@@ -24,8 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/custom-theme.scss",
-              "src/styles.css"
+              "src/_theme.scss",
+              "src/styles.scss"
             ],
             "scripts": []
           },
